--- a/views/signup.erb
+++ b/views/signup.erb
@@ -1,7 +1,8 @@
-<form method="POST" action="/sign-in">   
+<form method="POST" action="/sign-up">   
 <label for="username">Username</label>   
 <input type="text" name="[login]username">   
 <label for="password">Password</label>   
 <input type="password" name="[login]password">   
 <input type="submit"> 
 </form>
+
