--- a/views/home.erb
+++ b/views/home.erb
@@ -1,7 +1,11 @@
-<form method="POST" action="/sign-in">   
-<label for="username">Username</label>   
-<input type="text" name="[login]username">   
-<label for="password">Password</label>   
-<input type="password" name="[login]password">   
-<input type="submit"> 
-</form>
+<% unless current_user %>
+
+	<form method="POST" action="/sign-in">   
+		<label for="username">Username</label>   
+		<input type="text" name="username">   
+		<label for="password">Password</label>   
+		<input type="password" name="password">   
+		<input type="submit"> 
+	</form>
+
+<% end %> 
