--- a/views/signup.erb
+++ b/views/signup.erb
@@ -1,8 +1,16 @@
-<form method="POST" action="/sign-up">   
-<label for="username">Username</label>   
-<input type="text" name="[login]username">   
-<label for="password">Password</label>   
-<input type="password" name="[login]password">   
-<input type="submit"> 
+<form method="POST" action="/sign-up">
+	<label for="username">Username</label>
+	<input type="text" name="username"><br>
+	<label for="password">Password</label>
+	<input type="password" name="password"><br>
+	<label for="fname">First Name</label>
+	<input type="text" name="fname"><br>
+	<label for="lname">Last Name</label>
+	<input type="text" name="lname"><br>
+	<label for="birthday">Birthday</label>
+	<input type="text" name="birthday"><br>
+	<label for="email">Email</label>
+	<input type="text" name="email"><br>
+	<input type="submit">
 </form>
 
