--- a/views/profile.erb
+++ b/views/profile.erb
@@ -1,1 +1,7 @@
 <h1><%= @user.username %></h1>
+<p><%= @user.fname %> <%= @user.lname %></p>
+<p>Birthday: <%= @user.birthday %></p>
+<p>Email: <%= @user.email %></p>
+<% if current_user == @user %>
+	<a href="/edit/<%= @user.id %>">Edit Profile</a>
+<% end %>
