--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,8 +2,11 @@
 <html>
 <head>
 	<title>blogapp</title>
+	<link rel="stylesheet" type="text/css" href="/style.css">
 </head>
+
 <body>
+<header>JC Blog App</header>
 
 <%= yield %>
 
