--- a/public/style.css
+++ b/public/style.css
@@ -10,6 +10,26 @@ header {
 	font-size: 50px;
 }
 
-.user_post {
+#epost {
 	border: solid 1px black;
+	padding: 30px;
+	width: 40%;
+	margin: auto;
+	background-color: pink;
+}
+
+#pinfo {
+	border: solid 1px black;
+	padding: 30px;
+	width: 40%;
+	margin: auto;
+}
+
+#uname {
+	font-size: 28px;
+}
+
+#comment-body {
+	width: 35%;
+	height: 40px;
 }
