--- a/views/home.erb
+++ b/views/home.erb
@@ -1,19 +1,19 @@
 <% unless current_user %>
-
+	<br>
 	<form method="POST" action="/sign-in">   
 		<label for="username">Username</label>   
 		<input type="text" name="username">   
 		<label for="password">Password</label>   
 		<input type="password" name="password">   
 		<input type="submit"> 
-	</form>
+	</form><br>
 	<a href="/signup">Sign Up</a>
 
 <% else %>
-
-	<button><a href="/log-out">Logout</a></button>
 	<br>
-	<%= current_user.username %>
+	<button><a href="/log-out">Logout</a></button>
+	<br><br>
+	<%= current_user.username %><br><br>
 	<a href="/users/<%= current_user.id %>">View Profile</a>
 <% end %>
 
